--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -59,7 +59,16 @@ main section.categories-show {
           opacity: 1.0;
         }
       }
-
+      aside.sold_out {
+        position: absolute;
+        top: 0;
+        left: 0;
+        padding: 8px;
+        background-color: rgb(207, 15, 15);
+        border-top-left-radius: 4px;
+        border-bottom-right-radius: 20px;
+        font-size: 1em;
+      }
     }
   }
 }
