--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -5,6 +5,7 @@
   </header>
   <% if cart.length == 0 %>
   <h1>Empty Cart</h1>
+  <%= link_to "Home", root_path %>
 <% else %>
   <div class="panel panel-default items">
     <table class="table table-bordered">
