--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,12 +1,49 @@
 <h1>Signup!</h1>
 
-<%= form_for :user, url: '/users' do |f| %>
-
-  First Name: <%= f.text_field :first_name %>
-  Last Name: <%= f.text_field :last_name %>
-  Email: <%= f.text_field :email %>
-  Password: <%= f.password_field :password %>
-  Password Confirmation: <%= f.password_field :password_confirmation %>
-  <%= f.submit "Submit" %>
-
+<%= form_for :user, url: '/users',:html => {:class => "form-horizontal"} do |f| %>
+  <div class="form-group">
+    <label class="control-label col-sm-2">
+      First Name: 
+    </label>
+    <div class="col-sm-10">
+      <%= f.text_field :first_name,class:"form-control" %>
+    </div>
+  </div>
+  <div class="form-group">
+    <label class="control-label col-sm-2">
+      Last Name: 
+    </label>
+    <div class="col-sm-10">
+      <%= f.text_field :last_name,class:"form-control" %>
+    </div>
+  </div>
+  <div class="form-group">
+    <label class="control-label col-sm-2">
+      Email:
+    </label>
+    <div class="col-sm-10">
+      <%= f.text_field :email,class:"form-control" %>
+    </div>
+  </div>
+  <div class="form-group">
+    <label class="control-label col-sm-2">
+      Password:
+    </label> 
+    <div class="col-sm-10">
+      <%= f.password_field :password,class:"form-control" %>
+    </div>
+  </div>
+  <div class="form-group">
+    <label class="control-label col-sm-2">
+      Password Confirmation: 
+    </label> 
+    <div class="col-sm-10">
+      <%= f.password_field :password_confirmation,class:"form-control" %>
+    </div>
+  </div>
+  <div class="form-group">        
+    <div class="col-sm-offset-2 col-sm-10">
+      <%= f.submit "Submit",class:"btn btn-default" %>
+    </div>
+  </div>
 <% end %>
